# Personal_blog

./: .gitignore  README.md  pyproject.toml
blogpro/: manage.py
blogpro/blog/: models.py  urls.py  views.py
blogpro/blog/migrations/: 0001_initial.py
blogpro/blogpro/: asgi.py  settings.py  urls.py  wsgi.py
blogpro/static/blog/: main.css
blogpro/staticfiles/blog/: main.css
blogpro/templates/: base.html
blogpro/templates/blog/: about.html  home.html  post_confirm_delete.html  post_detail.html
blogpro/templates/users/: logout.html  profile.html  profile_update.html  register.html
blogpro/users/: signals.py  urls.py  views.py
blogpro/users/migrations/: 0001_initial.py
