[tool.poetry]
name = "personal-blog"
version = "0.1.0"
description = "Django blog project"
authors = ["Sen Senpo"]
readme = "README.md"
packages = [{include = "personal_blog"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
requests = "^2.28.1"
psycopg2-binary = "^2.9.5"
django-grappelli = "^3.0.4"
django-crispy-forms = "^1.14.0"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
